@@ -5,14 +5,21 @@
 #include <testfwk.h>
 #include <stdbool.h>
 
-bool Ternary(unsigned char status)
+#ifdef __bool_true_false_are_defined
+
+bool ternary(unsigned char status)
 {
 	return (status == 0) ? 0 : 1;
 }
 
+#endif //__bool_true_false_are_defined
+
+
 void
 testBug(void)
 {
-	ASSERT(!Ternary(0x00));
-	ASSERT( Ternary(0x10));
+#ifdef __bool_true_false_are_defined
+	ASSERT(!ternary(0x00));
+	ASSERT( ternary(0x10));
+#endif //__bool_true_false_are_defined
 }
